# semantic-similarity-explorer

./: .gitignore  README.md  app.py  dino_backend.py  main.py  pyproject.toml
fixtures/: test.ppm
tests/: test_app.py  test_backend.py
